# weather-api

./: .env  Procfile  README.md  api.py  controller.py  db_weather.py  open_weather_api.py  pyproject.toml  requirements.txt
src/: app.py  dao_weather.py  db_weather.py  model_weather.py  open_weather_api.py  response.py
