[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather_api_CAIO_PINHO"
version = "0.0.1"
authors = [
  { name="Caio Broering Pinho", email="caiopinho9@gmail.com" },
]
description = "Weather forecast api"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CaioPinho9/weather-api"